@@ -9,6 +9,11 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  11 Sep 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Fixed missing
+  check in new autouse function. Fixed out-of-bounds exception on catpkgsplit
+  tuple access in vardbapi.move_ent. Changed to manual stat calls in
+  cacheddir.
+
   09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Possible fix
   for autouse() that will prevent recursion and locks.
   
